fix reponsiveness on mobile

--- a/assets/built/screen.css
+++ b/assets/built/screen.css
@@ -2152,7 +2152,7 @@ h5, h6 {
     position: absolute;
     top: -5px;
     right: 40px;
-    z-index: 1999;
+    z-index: 1399;
     /* right: 3.5%; */
     bottom: 0;
     left: 0;
@@ -2244,8 +2244,8 @@ h5, h6 {
 
 @media (max-width:650px) {
     .site-footer-content {
-        -ms-flex-direction: column;
-        flex-direction: column
+        -ms-flex-direction: row;
+        flex-direction: row
     }
     .site-footer-nav a:first-child {
         margin-left: 0
